--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Edkallenn Silva de Lima
-tagline: Agente de Polícia Federal e Professor
+description: Agente de Polícia Federal e Professor
